plugins {
    id("java")
    id("com.gradleup.shadow") version "9.4.1"
}

group = "io.github.jack1424"
version = "1.5.0"

repositories {
    mavenCentral()
    maven {
        name = "aikar-repo"
        url = "https://repo.aikar.co/nexus/content/groups/aikar/"
    }
    maven {
        name = "placeholderapi-repo"
        url = "https://repo.helpch.at/releases"
    }
}

dependencies {
    compileOnly("org.spigotmc:spigot-api:1.8.8-R0.1-SNAPSHOT")
    compileOnly("me.clip:placeholderapi:2.12.2")
    implementation("com.googlecode.json-simple:json-simple:1.1.1")
    implementation("org.bstats:bstats-bukkit:3.2.1")
}

build {
    dependsOn(shadowJar)
}

shadowJar {
    relocate("org.bstats", "io.github.jack1424.realTimeWeather")
    relocate("org.json.simple", "io.github.jack1424.realTimeWeather.libs.jsonsimple")
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
    options.release.set(8)
}

processResources {
    def props = [version: project.version]

    inputs.properties(props)
    filteringCharset = "UTF-8"

    filesMatching("plugin.yml") {
        expand(props)
    }
}
